--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/stevo.css' %}">
   <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
@@ -55,6 +55,58 @@
 
 
 </head>
+<script>
+$(document).ready(function() {
+
+	var showChar = 100;
+	var ellipsestext = "...";
+	var moretext = "more";
+	var lesstext = "less";
+	$('.more').each(function() {
+    debugger;
+		var content = $(this).html();
+
+		if(content.length > showChar) {
+
+			var c = content.substr(0, showChar);
+			var h = content.substr(showChar-1, content.length - showChar);
+
+			var html = c + '<span class="moreellipses">' + ellipsestext+ '&nbsp;</span><span class="morecontent"><span>' + h + '</span>&nbsp;&nbsp;<a href="#myModal" class="morelink">' + moretext + '</a></span>';
+
+			$(this).html(html);
+		}
+
+	});
+
+	$(".morelink").click(function(e){
+
+
+    e.preventDefault();
+    var href = jQuery(this).attr('href');
+    var myHeading = "<p>"+$(this).prev()[0].innerHTML+"</p>";
+    var x = new Date();
+    $("#modalBody").html(myHeading);
+
+    var modalTitle=$(this).parent().parent().prev().text()
+    $("#modalTitle").html(modalTitle)
+    $('#myModal').modal('show');
+
+	});
+
+
+});
+
+function openNav() {
+document.getElementById("sidebar").style.width = "350px";
+
+}
+
+function closeNav() {
+document.getElementById("sidebar").style.width = "0";
+
+}
+</script>
+
   <body>
 
   <!--==========================
@@ -62,14 +114,14 @@
   ============================-->
 
   <header id="header" class="fixed-top ">
-    <div class="container">
+    <!-- <div class="container"> -->
+     <div class="logo float-left ">
+         <a href="#intro" class="scrollto"><img src="{% static 'images/logos.png'  %}"  alt="" class="img-fluid "></a>
+    </div>
+         <span style ="margin-bottom:0px"><h4 style ="margin-bottom:0px">
+              The digital innovation hub within Virtusa</h4></span>
 
-      <div class="logo float-left ">
-
-       <a href="#intro" class="scrollto"><img src="static/images/logo.png"  alt="" class="img-fluid "></a>
-      </div>
-
-      <nav class="main-nav float-right d-none d-lg-block ">
+      <nav class="main-nav  d-none d-lg-block " style="margin-left:168px;">
         <ul>
           <li
           {% if '/' == request.path %}
@@ -78,9 +130,10 @@
              class= "nav-item "
           {% endif %}
                    >
-            <a href ="#Home">Home</a></li>
+            <a href ="#Home" >Home</a>
+          <i ></i></li>
           <li>
-          <a href="#about">About Us</a></li>
+          <a href="#about">Our Practices</a></li>
           <li
           {% if '/services/' == request.path %}
               class= "nav-item active"
@@ -89,14 +142,48 @@
           {% endif %}
 
           >
-          <a href="{%url 'services'%}">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <a href="{%url 'services' %}">Solutions</a></li>
+          <li><a href="#portfolio">Innovation</a></li>
 
         </ul>
       </nav>
 
-    </div>
+
+
+
+    <div class="wrapper">
+       <div class="container-fluid ">
+          <button type="button" id="sidebarCollapse" class="btn btn-dark float-right" onclick="openNav()">
+                <i class="fa fa-align-left"></i>
+                    <span></span>
+                        </button>
+                         </div>
+
+                <div id="sidebar" class="sidebar">
+                  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+
+  <div class="list-group panel">
+            {%  for item in models %}
+                  <!-- <a href="#">{{item.name}}</a> -->
+               <a href="#menu{{item.id}}" class=" collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><span class="hidden-sm-down">{{item.name}}</span> </a>
+                    <div class="collapse p-3" id="menu{{item.id}}">
+                       {%  for items in item.cats %}
+                         <a href="#menu1sub{{items.id}}"  style="background-color:pink" data-toggle="collapse" aria-expanded="false"> {{ items.name}}</a>
+                                   <div class="collapse" id="menu1sub{{items.id}}">
+                                        {%  for item_new in items.category.all %}
+                                                 <a href="{%url 'model'%}?model={{ item_new.name }}"class="list-group-item" data-parent="#menu1sub1{{items.id}}">{{ item_new.name}}</a>
+                                        {%endfor%}
+                               <!-- <div class="collapse"> -->
+                         </div>
+                    {%endfor%}
+                     </div>
+                {%endfor%}
+
+</div>
+
   </header>
+
+
 
 
   <section id="intro" class="clearfix">
@@ -190,14 +277,29 @@
         <div class="row">
             {% if models %}
                {%  for item in models %}
-               <div class="col-md-6 col-lg-4 mb-4 wow bounceInUp" data-wow-duration="1.4s">
-                <div class="card mb-3 h-100">
-                     <img class="card-img-top img-fluid card-style" src="{{item.image.url}}" alt="">
+
+
+
+               <div class="col-md-6 col-lg-4 mb-4 wow bounceInUp " data-wow-duration="1.4s">
+                <div class="card mb-3 h-85 ">
+                  <div class="box">
+                     <img class="card-img-top img-fluid card-style  h-85 " src="{{item.image.url}}" alt="">
+                         <!-- <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #ff689b;"></i></div> -->
                      <div class="card-body">
                          <h4 class="title"><a href="{%url 'services'%}?cat={{item.id}}">{{item.name}}</a></h4>
-                         <p class="description">{{item.summary}}</p>
+                         <p class="description comment more">{{item.summary}}</p>
+</div>
 
                      </div>
+
+
+
+                     <!-- <div class="card-footer">
+                       <small class="text-muted">
+                          Updated on <cite title="Source Title">{{item.time}}</cite>
+                       </small>
+
+                    </div> -->
                  </div>
                </div>
                {% endfor %}
@@ -213,6 +315,22 @@
 
       </div>
     </section>
+
+    <div class="modal fade" id="myModal" role="dialog">
+       <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title" id ="modalTitle"></h4>
+        </div>
+        <div class="modal-body" id ="modalBody">
+            <!-- <p>Some text in the modal.</p> -->
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
+        </div>
+     </div>
+  </div>
+</div>
     <!-- #services -->
     <!--==========================
     Footer
