--- a/virtusa/static/css/risk_quantification.css
+++ b/virtusa/static/css/risk_quantification.css
@@ -1,7 +1,7 @@
 
 
 #header {
-  height: 80px;
+  height: 105px;
   transition: all 0.5s;
   z-index: 997;
   transition: all 0.5s;
@@ -12,7 +12,7 @@
 
 #header.header-scrolled,
 #header.header-pages {
-  height: 60px;
+  height: 95px;
   padding: 10px 0;
 }
 
@@ -32,15 +32,94 @@
   text-decoration: none;
 }
 
-#header .logo img {
-  padding: 0;
-  margin: 7px 0;
+#header .logo img
+  {
+    padding: 0;
+    margin: 7px 0;
+    margin: 14px 29px;
+    max-height: 50px;
 
-      margin: 0px 0;
-    max-height: 40px;
-    width: 7rem;
+    max-height: 45px;
+    width: 130px;
 }
 
+.main-pages {
+  margin-top: 60px;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+.sidebar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: rgb(0,0,0,0.70);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar a:hover {
+  color: #f1f1f1;
+}
+
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+}
+
+.openbtn:hover {
+  background-color: #444;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
+}
+
+
+/*--------------------------------------------------------------
+# Intro Section
+--------------------------------------------------------------*/
+
+#intro {
+  width: 100%;
+  position: relative;
+  background: url("../images/intro-bg.jpg") center bottom no-repeat;
+  background-size: cover;
+  padding: 200px 0 120px 0;
+}
 .border{
 
   border-radius: 1px solid #000;
@@ -165,6 +244,75 @@
 .main-nav .drop-down .drop-down > a {
   padding-right: 35px;
 }
+
+
+.container {
+    margin-top: 20px;
+}
+
+/* Carousel Styles */
+.carousel-indicators .active {
+    background-color: #2980b9;
+}
+
+.carousel-inner img {
+    width: 100%;
+    max-height: 460px
+}
+
+.carousel-control {
+    width: 0;
+}
+
+.carousel-control.left,
+.carousel-control.right {
+	opacity: 1;
+	filter: alpha(opacity=100);
+	background-image: none;
+	background-repeat: no-repeat;
+	text-shadow: none;
+}
+
+.carousel-control.left span {
+	padding: 15px;
+}
+
+.carousel-control.right span {
+	padding: 15px;
+}
+
+.carousel-control .glyphicon-chevron-left,
+.carousel-control .glyphicon-chevron-right,
+.carousel-control .icon-prev,
+.carousel-control .icon-next {
+	position: absolute;
+	top: 45%;
+	z-index: 5;
+	display: inline-block;
+}
+
+.carousel-control .glyphicon-chevron-left,
+.carousel-control .icon-prev {
+	left: 0;
+}
+
+.carousel-control .glyphicon-chevron-right,
+.carousel-control .icon-next {
+	right: 0;
+}
+
+.carousel-control.left span,
+.carousel-control.right span {
+	background-color: #000;
+}
+
+.carousel-control.left span:hover,
+.carousel-control.right span:hover {
+	opacity: .7;
+	filter: alpha(opacity=70);
+}
+
+/* Carousel Header Styles */
 
 .main-nav .drop-down .drop-down > a:after {
   content: "\f105";
@@ -372,18 +520,18 @@ section#intro{
 	margin: 0 auto;
 	margin-top:80px;
 	padding: 0;
-	border-bottom:1px solid #e9e9e9;
+	/* border-bottom:1px solid #e9e9e9; */
 	/* padding-top:60px; */
-	margin-bottom:40px;
+	/* margin-bottom:40px; */
 }
 section#servicesNew {
   max-width: 100%;
-  background:#e9ecef;
+  /* background:#e9ecef; */
   height:auto;
   margin: 0 auto;
   /* margin-top:80px; */
   padding: 0;
-  border-bottom:1px solid #e9e9e9;
+  /* border-bottom:1px solid #e9e9e9; */
   padding-top:60px;
 
 }
