--- a/virtusa/static/lib/bootstrap/css/bootstrap.css
+++ b/virtusa/static/lib/bootstrap/css/bootstrap.css
@@ -4118,8 +4118,8 @@ input[type="button"].btn-block {
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  color: #495057;
-  background-color: #fff;
+  color: white;
+  background-color: black;
   border-color: #dee2e6 #dee2e6 #fff;
 }
 
